# microstate-architecture-search

./: .gitignore  LICENSE  README.md  baseline.py  canonical_matching.py  centroid_analysis.py  centroid_metrics.py  clustering_trainer.py  helper_function.py  metrics_utils.py  model.py  model_viz.py  parse_args.py  process_eeg_signals.py  pyproject.toml  requirements-py36.txt  requirements.txt  seeding.py  train.py  train_cluster.py  trainer_diagnostics.py  trainer_metrics.py  trainer_viz.py
analysis/: aggregate_results.py  sweep_analysis.py
config/: config.py  config.toml
data/: README.md
data/sweep_results/: 010012_sweep.csv  010016_sweep.csv  010017_sweep.csv  010019_sweep.csv  010020_sweep.csv  010021_sweep.csv  010022_sweep.csv  010023_sweep.csv  010024_sweep.csv  010026_sweep.csv
docs/: RESEARCH_METHODOLOGY.md  TECHNICAL_REPORT.md
scripts/: extract_sweep_csv.py  run_cube_sweep.sh  run_sweep_pool.sh  setup_cpu_env.sh
